k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echolog-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echolog-gateway
  template:
    metadata:
      labels:
        app: echolog-gateway
    spec:
      containers:
        - name: gateway
          image: echolog-backend:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echolog-celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echolog-celery-worker
  template:
    metadata:
      labels:
        app: echolog-celery-worker
    spec:
      containers:
        - name: worker
          image: echolog-backend:latest
          command: ["celery", "-A", "celery_worker", "worker", "--loglevel=info"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echolog-celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echolog-celery-beat
  template:
    metadata:
      labels:
        app: echolog-celery-beat
    spec:
      containers:
        - name: beat
          image: echolog-backend:latest
          command: ["celery", "-A", "celery_worker", "beat", "--loglevel=info"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
