k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echolog-gateway-service
spec:
  selector:
    app: echolog-gateway
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
