k8s/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echolog-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: echolog-gateway-service
          port: 8000
      middlewares:
        - name: echolog-ratelimit

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: echolog-ratelimit
spec:
  rateLimit:
    average: 100
    burst: 200
